--- a/alert-manager.conf
+++ b/alert-manager.conf
@@ -1,38 +1,38 @@
-# Alert Manager Configuration File
-# ================================
+# Конфигурационный файл Alert Manager
+# ===================================
 
-# General Settings
-# ----------------
+# Основные настройки
+# ------------------
 LOG_FILE="alerts.log"
-CHECK_INTERVAL=1  # minutes
+CHECK_INTERVAL=1  # минуты
 ENABLE_ALERTS=true
-ALERT_COOLDOWN=5  # minutes between same type alerts
+ALERT_COOLDOWN=5  # минуты между алертами одного типа
 
-# CPU Monitoring
+# Мониторинг CPU
 # --------------
-CPU_THRESHOLD=80.0  # percentage
+CPU_THRESHOLD=80.0  # проценты
 CPU_ALERT_ENABLED=true
 
-# Memory Monitoring  
+# Мониторинг памяти  
 # -----------------
-RAM_THRESHOLD=85.0  # percentage
+RAM_THRESHOLD=85.0  # проценты
 RAM_ALERT_ENABLED=true
 
-# Disk Monitoring
+# Мониторинг диска
 # ---------------
-DISK_THRESHOLD=90.0  # percentage
+DISK_THRESHOLD=90.0  # проценты
 DISK_ALERT_ENABLED=true
-DISK_PATH="/"  # path to monitor
+DISK_PATH="/"  # путь для мониторинга
 
-# Process Monitoring
-# ------------------
-PROCESS_THRESHOLD=200  # number of processes
+# Мониторинг процессов
+# -------------------
+PROCESS_THRESHOLD=200  # количество процессов
 PROCESS_ALERT_ENABLED=true
 
-# Test Mode (set low values for testing)
-# --------------------------------------
+# Тестовый режим (низкие значения для тестирования)
+# ------------------------------------------------
 TEST_MODE=true
 TEST_CPU_THRESHOLD=5
-TEST_RAM_THRESHOLD=5 
+TEST_RAM_THRESHOLD=5
 TEST_DISK_THRESHOLD=2
 TEST_PROCESS_THRESHOLD=30
