--- a/alert-manager.conf
+++ b/alert-manager.conf
@@ -1,38 +1,38 @@
-# Конфигурационный файл Alert Manager
-# ===================================
+# Alert Manager Configuration File
+# ================================
 
-# Основные настройки
-# ------------------
+# General Settings
+# ----------------
 LOG_FILE="alerts.log"
-CHECK_INTERVAL=1  # минуты
+CHECK_INTERVAL=1  # minutes
 ENABLE_ALERTS=true
-ALERT_COOLDOWN=5  # минуты между алертами одного типа
+ALERT_COOLDOWN=5  # minutes between same type alerts
 
-# Мониторинг CPU
+# CPU Monitoring
 # --------------
-CPU_THRESHOLD=80.0  # проценты
+CPU_THRESHOLD=80.0  # percentage
 CPU_ALERT_ENABLED=true
 
-# Мониторинг памяти  
+# Memory Monitoring  
 # -----------------
-RAM_THRESHOLD=85.0  # проценты
+RAM_THRESHOLD=85.0  # percentage
 RAM_ALERT_ENABLED=true
 
-# Мониторинг диска
+# Disk Monitoring
 # ---------------
-DISK_THRESHOLD=90.0  # проценты
+DISK_THRESHOLD=90.0  # percentage
 DISK_ALERT_ENABLED=true
-DISK_PATH="/"  # путь для мониторинга
+DISK_PATH="/"  # path to monitor
 
-# Мониторинг процессов
-# -------------------
-PROCESS_THRESHOLD=200  # количество процессов
+# Process Monitoring
+# ------------------
+PROCESS_THRESHOLD=200  # number of processes
 PROCESS_ALERT_ENABLED=true
 
-# Тестовый режим (низкие значения для тестирования)
-# ------------------------------------------------
+# Test Mode (set low values for testing)
+# --------------------------------------
 TEST_MODE=true
-TEST_CPU_THRESHOLD=5
-TEST_RAM_THRESHOLD=5
-TEST_DISK_THRESHOLD=2
-TEST_PROCESS_THRESHOLD=30
+TEST_CPU_THRESHOLD=10.0
+TEST_RAM_THRESHOLD=20.0  
+TEST_DISK_THRESHOLD=30.0
+TEST_PROCESS_THRESHOLD=50
