Add network and temperatures monitor

--- a/alert-manager.conf
+++ b/alert-manager.conf
@@ -29,6 +29,17 @@ DISK_PATH="/"  # path to monitor
 PROCESS_THRESHOLD=200  # number of processes
 PROCESS_ALERT_ENABLED=true
 
+# Мониторинг температуры
+# ---------------------
+TEMPERATURE_THRESHOLD=75  # градусы Цельсия
+TEMPERATURE_ALERT_ENABLED=true
+
+# Мониторинг сети
+# ---------------
+NETWORK_CONNECTIONS_THRESHOLD=1000  # количество активных соединений
+NETWORK_TRAFFIC_THRESHOLD=1000  # MB общего трафика
+NETWORK_ALERT_ENABLED=true
+
 # Test Mode (set low values for testing)
 # --------------------------------------
 TEST_MODE=true
@@ -36,3 +47,6 @@ TEST_CPU_THRESHOLD=5
 TEST_RAM_THRESHOLD=5
 TEST_DISK_THRESHOLD=2
 TEST_PROCESS_THRESHOLD=30
+TEST_TEMPERATURE_THRESHOLD=60
+TEST_NETWORK_CONNECTIONS_THRESHOLD=50
+TEST_NETWORK_TRAFFIC_THRESHOLD=100
